# EDD-Iris

./: .gitignore  README.md  bDeploy.sh  build-exes.sh  deploy.sh
code/: CMakeLists.txt  Toolchain-rpi.cmake
code/include/: Capture.h  ConfigManager.h  Draw.h  FileReader.h  ImageCap.h  Matrix.h  MatrixOps.h  ObjDetection.h  PinControl.h
code/src/: Capture.cpp  ConfigManager.cpp  Draw.cpp  FileReader.cpp  ImageCap.cpp  Matrix.cpp  MatrixOps.cpp  ObjDetection.cpp  PinControl.cpp  main.cpp
web/: functions.js  index.html  index.php  styles.css  triggerCrop.php  writeConfig.php
web/about/: abStyles.css  index.html
web/configs/: sample.txt
web/fullscreen/: fsFunctions.js  fsStyles.css  index.html
web/settings/: index.html
